Fix a couple of 404s,  and a layout problem with notifications in Konqueror (at least) due to buggy HTML.  I'm pretty sure the comma was unnecessary too,  but I'm willing to be proven wrong.
git-svn-id: http://svn.a2billing.net/svn/asterisk2billing/trunk@1855 9d51a8f0-6521-42ea-932e-d822aa02ce2f

--- a/admin/Public/templates/default/css/main.css
+++ b/admin/Public/templates/default/css/main.css
@@ -400,7 +400,7 @@ SPAN.errorText {
 .forgetpassword_image{
 	padding-right: 8px;
 	padding-left: 8px;
-	background-image: url(../images/security.png);
+	background-image: url(/common/images/security.png);
 	width: 64px;
 	height:64px;
 	background-repeat: no-repeat;
