--- a/admin/Public/templates/default/css/menu.css
+++ b/admin/Public/templates/default/css/menu.css
@@ -210,7 +210,7 @@ img.rss {
 	font-size: 12px;
 	padding: 2px 10px;
 	text-decoration: none;
-	background:transparent url(../images/menu-bg.jpg) repeat scroll right top;
+	background:transparent url(../images/top_menu_bg.png) repeat scroll right top;
 	color : #444444;
 	height: 20px;
 }
